fixed some model stuff

--- a/Classification_1_CW_MH.ipynb
+++ b/Classification_1_CW_MH.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "792f42dc-882d-4574-a348-e290ef12b6d9",
    "metadata": {},
    "outputs": [],
@@ -2884,7 +2884,7 @@
     "# Separate numerical columns\n",
     "numerical_cols = df.select_dtypes(include=['float64', 'int64']).columns\n",
     "\n",
-    "df.replace([np.inf, -np.inf], np.nan, inplace=True)\n",
+    "\n",
     "# Impute missing values for numerical columns using the median\n",
     "for col in numerical_cols:\n",
     "    if df[col].isnull().sum() > 0:\n",
@@ -2912,10 +2912,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.16666666666666666\n",
-      "F1 Score: 0.23119658119658124\n",
-      "Recall: 0.16666666666666666\n",
-      "Precision: 0.7363636363636363\n"
+      "Accuracy: 0.1\n",
+      "F1 Score: 0.043560606060606064\n",
+      "Recall: 0.1\n",
+      "Precision: 0.14583333333333334\n"
      ]
     }
    ],
@@ -2938,12 +2938,12 @@
     "svm_model.fit(X_train_scaled, y_train)\n",
     "\n",
     "# Make predictions on the test set\n",
-    "y_pred = svm_model.predict(X_test)\n",
+    "y_pred = svm_model.predict(X_test_scaled)\n",
     "\n",
     "# Evaluate the model's accuracy\n",
     "f1 = f1_score(y_test, y_pred,average='weighted', zero_division= np.nan)\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
-    "recall = recall_score(y_test, y_pred,average='weighted')\n",
+    "recall = recall_score(y_test, y_pred,average='weighted', zero_division= np.nan)\n",
     "precision = precision_score(y_test, y_pred,average='weighted', zero_division= np.nan)\n",
     "\n",
     "print(\"Accuracy:\", accuracy)\n",
@@ -2962,7 +2962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "ee13f1e5-6792-4561-8aee-4d0679b5636d",
    "metadata": {},
    "outputs": [
@@ -3010,14 +3010,6 @@
     "print(\"Recall:\", recall)\n",
     "print(\"Precision:\", precision)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3498211b-4e4f-4cc4-947d-93624564b94b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
