--- a/Classification_3_CW_MH.ipynb
+++ b/Classification_3_CW_MH.ipynb
@@ -1259,10 +1259,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.14285714285714285\n",
-      "F1 Score: 0.12192999192885932\n",
-      "Recall: 0.14285714285714285\n",
-      "Precision: 0.20188541755401682\n"
+      "Accuracy: 0.26904761904761904\n",
+      "F1 Score: 0.17695915644761578\n",
+      "Recall: 0.26904761904761904\n",
+      "Precision: 0.1611248456267565\n"
      ]
     }
    ],
@@ -1285,12 +1285,12 @@
     "svm_model.fit(X_train_scaled, y_train)\n",
     "\n",
     "# Make predictions on the test set\n",
-    "y_pred = svm_model.predict(X_test)\n",
+    "y_pred = svm_model.predict(X_test_scaled)\n",
     "\n",
     "# Evaluate the model's accuracy\n",
     "f1 = f1_score(y_test, y_pred,average='weighted', zero_division= np.nan)\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
-    "recall = recall_score(y_test, y_pred,average='weighted')\n",
+    "recall = recall_score(y_test, y_pred,average='weighted', zero_division= np.nan)\n",
     "precision = precision_score(y_test, y_pred,average='weighted', zero_division= np.nan)\n",
     "\n",
     "print(\"Accuracy:\", accuracy)\n",
