--- a/Classification_4_CW_MH.ipynb
+++ b/Classification_4_CW_MH.ipynb
@@ -1684,10 +1684,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.28431372549019607\n",
-      "F1 Score: 0.25590117520344774\n",
-      "Recall: 0.28431372549019607\n",
-      "Precision: 0.3213764156906864\n"
+      "Accuracy: 0.8392156862745098\n",
+      "F1 Score: 0.8391389519460678\n",
+      "Recall: 0.8392156862745098\n",
+      "Precision: 0.8416626830408013\n"
      ]
     }
    ],
@@ -1710,12 +1710,12 @@
     "svm_model.fit(X_train_scaled, y_train)\n",
     "\n",
     "# Make predictions on the test set\n",
-    "y_pred = svm_model.predict(X_test)\n",
+    "y_pred = svm_model.predict(X_test_scaled)\n",
     "\n",
     "# Evaluate the model's accuracy\n",
     "f1 = f1_score(y_test, y_pred,average='weighted', zero_division= np.nan)\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
-    "recall = recall_score(y_test, y_pred,average='weighted')\n",
+    "recall = recall_score(y_test, y_pred,average='weighted', zero_division= np.nan)\n",
     "precision = precision_score(y_test, y_pred,average='weighted', zero_division= np.nan)\n",
     "\n",
     "print(\"Accuracy:\", accuracy)\n",
