--- a/Classification_5_CW_MH.ipynb
+++ b/Classification_5_CW_MH.ipynb
@@ -1124,10 +1124,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.5267857142857143\n",
-      "F1 Score: 0.47546040515653776\n",
-      "Recall: 0.5267857142857143\n",
-      "Precision: 0.5347633136094674\n"
+      "Accuracy: 0.5803571428571429\n",
+      "F1 Score: 0.5275004266939751\n",
+      "Recall: 0.5803571428571429\n",
+      "Precision: 0.6009615384615384\n"
      ]
     }
    ],
@@ -1150,12 +1150,12 @@
     "svm_model.fit(X_train_scaled, y_train)\n",
     "\n",
     "# Make predictions on the test set\n",
-    "y_pred = svm_model.predict(X_test)\n",
+    "y_pred = svm_model.predict(X_test_scaled)\n",
     "\n",
     "# Evaluate the model's accuracy\n",
     "f1 = f1_score(y_test, y_pred,average='weighted', zero_division= np.nan)\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
-    "recall = recall_score(y_test, y_pred,average='weighted')\n",
+    "recall = recall_score(y_test, y_pred,average='weighted', zero_division= np.nan)\n",
     "precision = precision_score(y_test, y_pred,average='weighted', zero_division= np.nan)\n",
     "\n",
     "print(\"Accuracy:\", accuracy)\n",
