--- a/Classification_2_CW_MH.ipynb
+++ b/Classification_2_CW_MH.ipynb
@@ -1632,10 +1632,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.3\n",
-      "F1 Score: 0.185\n",
-      "Recall: 0.3\n",
-      "Precision: 0.49206349206349204\n"
+      "Accuracy: 0.95\n",
+      "F1 Score: 0.9666666666666666\n",
+      "Recall: 0.95\n",
+      "Precision: 1.0\n"
      ]
     }
    ],
@@ -1658,12 +1658,12 @@
     "svm_model.fit(X_train_scaled, y_train)\n",
     "\n",
     "# Make predictions on the test set\n",
-    "y_pred = svm_model.predict(X_test)\n",
+    "y_pred = svm_model.predict(X_test_scaled)\n",
     "\n",
     "# Evaluate the model's accuracy\n",
     "f1 = f1_score(y_test, y_pred,average='weighted', zero_division= np.nan)\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
-    "recall = recall_score(y_test, y_pred,average='weighted')\n",
+    "recall = recall_score(y_test, y_pred,average='weighted', zero_division= np.nan)\n",
     "precision = precision_score(y_test, y_pred,average='weighted', zero_division= np.nan)\n",
     "\n",
     "print(\"Accuracy:\", accuracy)\n",
@@ -1730,14 +1730,6 @@
     "print(\"Recall:\", recall)\n",
     "print(\"Precision:\", precision)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f354e545-410c-41a8-b881-93e3c531ae33",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
