fixed some model stuff pt2

--- a/Classification_1_CW_MH.ipynb
+++ b/Classification_1_CW_MH.ipynb
@@ -2555,15 +2555,15 @@
        "      <td>1</td>\n",
        "      <td>3.824254</td>\n",
        "      <td>1.923762</td>\n",
-       "      <td>1.918450e+00</td>\n",
-       "      <td>2.352067e+00</td>\n",
-       "      <td>3.117298e+00</td>\n",
+       "      <td>1.918450</td>\n",
+       "      <td>2.352067</td>\n",
+       "      <td>3.117298</td>\n",
        "      <td>3.051735</td>\n",
        "      <td>3.307977</td>\n",
-       "      <td>3.430222e+00</td>\n",
-       "      <td>3.586667e+00</td>\n",
+       "      <td>3.430222</td>\n",
+       "      <td>3.586667</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.836830e+00</td>\n",
+       "      <td>1.836830</td>\n",
        "      <td>1.855640</td>\n",
        "      <td>1.142389</td>\n",
        "      <td>2.054345</td>\n",
@@ -2579,15 +2579,15 @@
        "      <td>1</td>\n",
        "      <td>3.904190</td>\n",
        "      <td>2.309524</td>\n",
-       "      <td>2.152930e+00</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>3.532368e+00</td>\n",
+       "      <td>2.152930</td>\n",
+       "      <td>2.439439</td>\n",
+       "      <td>3.532368</td>\n",
        "      <td>3.524866</td>\n",
        "      <td>3.677791</td>\n",
-       "      <td>3.636671e+00</td>\n",
-       "      <td>3.696868e+00</td>\n",
+       "      <td>3.636671</td>\n",
+       "      <td>3.696868</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.951532e+00</td>\n",
+       "      <td>1.951532</td>\n",
        "      <td>1.442323</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>2.127914</td>\n",
@@ -2603,15 +2603,15 @@
        "      <td>2</td>\n",
        "      <td>3.750908</td>\n",
        "      <td>1.161068</td>\n",
-       "      <td>1.017033e+00</td>\n",
-       "      <td>2.347993e+00</td>\n",
-       "      <td>3.381889e+00</td>\n",
+       "      <td>1.017033</td>\n",
+       "      <td>2.347993</td>\n",
+       "      <td>3.381889</td>\n",
        "      <td>3.393096</td>\n",
        "      <td>3.509134</td>\n",
-       "      <td>3.512466e+00</td>\n",
-       "      <td>3.622203e+00</td>\n",
+       "      <td>3.512466</td>\n",
+       "      <td>3.622203</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.000000e+00</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>1.584105</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.945321</td>\n",
@@ -2627,15 +2627,15 @@
        "      <td>1</td>\n",
        "      <td>3.809383</td>\n",
        "      <td>1.912355</td>\n",
-       "      <td>1.856940e+00</td>\n",
-       "      <td>2.498944e+00</td>\n",
-       "      <td>3.289406e+00</td>\n",
+       "      <td>1.856940</td>\n",
+       "      <td>2.498944</td>\n",
+       "      <td>3.289406</td>\n",
        "      <td>3.371232</td>\n",
        "      <td>3.541995</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>3.473179e+00</td>\n",
+       "      <td>3.498470</td>\n",
+       "      <td>3.473179</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.869965e+00</td>\n",
+       "      <td>1.869965</td>\n",
        "      <td>1.481658</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>2.155032</td>\n",
@@ -2651,15 +2651,15 @@
        "      <td>1</td>\n",
        "      <td>3.893561</td>\n",
        "      <td>2.094192</td>\n",
-       "      <td>1.881271e+00</td>\n",
-       "      <td>2.785707e+00</td>\n",
-       "      <td>3.344339e+00</td>\n",
+       "      <td>1.881271</td>\n",
+       "      <td>2.785707</td>\n",
+       "      <td>3.344339</td>\n",
        "      <td>3.274417</td>\n",
        "      <td>3.485872</td>\n",
-       "      <td>3.516527e+00</td>\n",
-       "      <td>3.642358e+00</td>\n",
+       "      <td>3.516527</td>\n",
+       "      <td>3.642358</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.480725e+00</td>\n",
+       "      <td>1.480725</td>\n",
        "      <td>1.510545</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>2.094192</td>\n",
@@ -2699,15 +2699,15 @@
        "      <td>1</td>\n",
        "      <td>3.901178</td>\n",
        "      <td>1.672421</td>\n",
-       "      <td>1.869554e+00</td>\n",
-       "      <td>2.234758e+00</td>\n",
-       "      <td>1.000000e+99</td>\n",
+       "      <td>1.869554</td>\n",
+       "      <td>2.234758</td>\n",
+       "      <td>3.365076</td>\n",
        "      <td>3.469689</td>\n",
        "      <td>3.565574</td>\n",
-       "      <td>3.653364e+00</td>\n",
-       "      <td>3.720899e+00</td>\n",
+       "      <td>3.653364</td>\n",
+       "      <td>3.720899</td>\n",
        "      <td>...</td>\n",
-       "      <td>2.140555e+00</td>\n",
+       "      <td>2.140555</td>\n",
        "      <td>1.960423</td>\n",
        "      <td>1.240300</td>\n",
        "      <td>2.149958</td>\n",
@@ -2723,15 +2723,15 @@
        "      <td>1</td>\n",
        "      <td>3.865257</td>\n",
        "      <td>1.796990</td>\n",
-       "      <td>1.643650e+00</td>\n",
-       "      <td>2.307902e+00</td>\n",
-       "      <td>3.411704e+00</td>\n",
+       "      <td>1.643650</td>\n",
+       "      <td>2.307902</td>\n",
+       "      <td>3.411704</td>\n",
        "      <td>3.410870</td>\n",
        "      <td>3.527868</td>\n",
-       "      <td>3.488609e+00</td>\n",
-       "      <td>1.000000e+99</td>\n",
+       "      <td>3.488609</td>\n",
+       "      <td>3.608122</td>\n",
        "      <td>...</td>\n",
-       "      <td>2.183981e+00</td>\n",
+       "      <td>2.183981</td>\n",
        "      <td>2.519171</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>2.174641</td>\n",
@@ -2747,15 +2747,15 @@
        "      <td>1</td>\n",
        "      <td>3.860198</td>\n",
        "      <td>2.097778</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>2.438788e+00</td>\n",
-       "      <td>3.365076e+00</td>\n",
+       "      <td>1.893078</td>\n",
+       "      <td>2.438788</td>\n",
+       "      <td>3.365076</td>\n",
        "      <td>3.391729</td>\n",
        "      <td>3.461051</td>\n",
-       "      <td>3.408433e+00</td>\n",
-       "      <td>3.531799e+00</td>\n",
+       "      <td>3.408433</td>\n",
+       "      <td>3.531799</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.000000e+99</td>\n",
+       "      <td>1.782716</td>\n",
        "      <td>2.478032</td>\n",
        "      <td>1.358316</td>\n",
        "      <td>2.125741</td>\n",
@@ -2771,15 +2771,15 @@
        "      <td>4</td>\n",
        "      <td>3.907102</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>1.473633e+00</td>\n",
-       "      <td>2.158604e+00</td>\n",
-       "      <td>3.459391e+00</td>\n",
+       "      <td>1.473633</td>\n",
+       "      <td>2.158604</td>\n",
+       "      <td>3.459391</td>\n",
        "      <td>3.478222</td>\n",
        "      <td>3.621380</td>\n",
-       "      <td>3.480155e+00</td>\n",
-       "      <td>3.595473e+00</td>\n",
+       "      <td>3.480155</td>\n",
+       "      <td>3.595473</td>\n",
        "      <td>...</td>\n",
-       "      <td>2.232310e+00</td>\n",
+       "      <td>2.232310</td>\n",
        "      <td>1.380573</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>2.105578</td>\n",
@@ -2795,15 +2795,15 @@
        "      <td>1</td>\n",
        "      <td>3.763867</td>\n",
        "      <td>2.281193</td>\n",
-       "      <td>2.199179e+00</td>\n",
-       "      <td>2.579235e+00</td>\n",
-       "      <td>3.382473e+00</td>\n",
+       "      <td>2.199179</td>\n",
+       "      <td>2.579235</td>\n",
+       "      <td>3.382473</td>\n",
        "      <td>3.375192</td>\n",
        "      <td>3.514874</td>\n",
-       "      <td>3.597044e+00</td>\n",
-       "      <td>3.663170e+00</td>\n",
+       "      <td>3.597044</td>\n",
+       "      <td>3.663170</td>\n",
        "      <td>...</td>\n",
-       "      <td>2.295435e+00</td>\n",
+       "      <td>2.295435</td>\n",
        "      <td>1.488551</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>2.021685</td>\n",
@@ -2820,57 +2820,44 @@
        "</div>"
       ],
       "text/plain": [
-       "     0         1         2             3             4             5     \\\n",
-       "0       1  3.824254  1.923762  1.918450e+00  2.352067e+00  3.117298e+00   \n",
-       "1       1  3.904190  2.309524  2.152930e+00  1.000000e+99  3.532368e+00   \n",
-       "2       2  3.750908  1.161068  1.017033e+00  2.347993e+00  3.381889e+00   \n",
-       "3       1  3.809383  1.912355  1.856940e+00  2.498944e+00  3.289406e+00   \n",
-       "4       1  3.893561  2.094192  1.881271e+00  2.785707e+00  3.344339e+00   \n",
-       "..    ...       ...       ...           ...           ...           ...   \n",
-       "145     1  3.901178  1.672421  1.869554e+00  2.234758e+00  1.000000e+99   \n",
-       "146     1  3.865257  1.796990  1.643650e+00  2.307902e+00  3.411704e+00   \n",
-       "147     1  3.860198  2.097778  1.000000e+99  2.438788e+00  3.365076e+00   \n",
-       "148     4  3.907102  1.000000  1.473633e+00  2.158604e+00  3.459391e+00   \n",
-       "149     1  3.763867  2.281193  2.199179e+00  2.579235e+00  3.382473e+00   \n",
+       "     0         1         2         3         4         5         6     \\\n",
+       "0       1  3.824254  1.923762  1.918450  2.352067  3.117298  3.051735   \n",
+       "1       1  3.904190  2.309524  2.152930  2.439439  3.532368  3.524866   \n",
+       "2       2  3.750908  1.161068  1.017033  2.347993  3.381889  3.393096   \n",
+       "3       1  3.809383  1.912355  1.856940  2.498944  3.289406  3.371232   \n",
+       "4       1  3.893561  2.094192  1.881271  2.785707  3.344339  3.274417   \n",
+       "..    ...       ...       ...       ...       ...       ...       ...   \n",
+       "145     1  3.901178  1.672421  1.869554  2.234758  3.365076  3.469689   \n",
+       "146     1  3.865257  1.796990  1.643650  2.307902  3.411704  3.410870   \n",
+       "147     1  3.860198  2.097778  1.893078  2.438788  3.365076  3.391729   \n",
+       "148     4  3.907102  1.000000  1.473633  2.158604  3.459391  3.478222   \n",
+       "149     1  3.763867  2.281193  2.199179  2.579235  3.382473  3.375192   \n",
        "\n",
-       "         6         7             8             9     ...          3303  \\\n",
-       "0    3.051735  3.307977  3.430222e+00  3.586667e+00  ...  1.836830e+00   \n",
-       "1    3.524866  3.677791  3.636671e+00  3.696868e+00  ...  1.951532e+00   \n",
-       "2    3.393096  3.509134  3.512466e+00  3.622203e+00  ...  1.000000e+00   \n",
-       "3    3.371232  3.541995  1.000000e+99  3.473179e+00  ...  1.869965e+00   \n",
-       "4    3.274417  3.485872  3.516527e+00  3.642358e+00  ...  1.480725e+00   \n",
-       "..        ...       ...           ...           ...  ...           ...   \n",
-       "145  3.469689  3.565574  3.653364e+00  3.720899e+00  ...  2.140555e+00   \n",
-       "146  3.410870  3.527868  3.488609e+00  1.000000e+99  ...  2.183981e+00   \n",
-       "147  3.391729  3.461051  3.408433e+00  3.531799e+00  ...  1.000000e+99   \n",
-       "148  3.478222  3.621380  3.480155e+00  3.595473e+00  ...  2.232310e+00   \n",
-       "149  3.375192  3.514874  3.597044e+00  3.663170e+00  ...  2.295435e+00   \n",
+       "         7         8         9     ...      3303      3304      3305  \\\n",
+       "0    3.307977  3.430222  3.586667  ...  1.836830  1.855640  1.142389   \n",
+       "1    3.677791  3.636671  3.696868  ...  1.951532  1.442323  1.000000   \n",
+       "2    3.509134  3.512466  3.622203  ...  1.000000  1.584105  1.000000   \n",
+       "3    3.541995  3.498470  3.473179  ...  1.869965  1.481658  1.000000   \n",
+       "4    3.485872  3.516527  3.642358  ...  1.480725  1.510545  1.000000   \n",
+       "..        ...       ...       ...  ...       ...       ...       ...   \n",
+       "145  3.565574  3.653364  3.720899  ...  2.140555  1.960423  1.240300   \n",
+       "146  3.527868  3.488609  3.608122  ...  2.183981  2.519171  1.000000   \n",
+       "147  3.461051  3.408433  3.531799  ...  1.782716  2.478032  1.358316   \n",
+       "148  3.621380  3.480155  3.595473  ...  2.232310  1.380573  1.000000   \n",
+       "149  3.514874  3.597044  3.663170  ...  2.295435  1.488551  1.000000   \n",
        "\n",
-       "         3304      3305      3306      3307      3308      3309      3310  \\\n",
-       "0    1.855640  1.142389  2.054345  2.808224  1.782186  2.665703  2.468214   \n",
-       "1    1.442323  1.000000  2.127914  2.979658  1.961089  2.519027  2.054383   \n",
-       "2    1.584105  1.000000  1.945321  3.257004  1.965061  2.536066  1.449324   \n",
-       "3    1.481658  1.000000  2.155032  3.270371  1.928473  2.618074  2.154013   \n",
-       "4    1.510545  1.000000  2.094192  3.246666  1.824516  2.562317  1.942256   \n",
-       "..        ...       ...       ...       ...       ...       ...       ...   \n",
-       "145  1.960423  1.240300  2.149958  3.042383  1.799134  2.772116  2.460484   \n",
-       "146  2.519171  1.000000  2.174641  2.902840  1.844850  2.647755  1.000000   \n",
-       "147  2.478032  1.358316  2.125741  3.041140  1.779308  2.585771  1.000000   \n",
-       "148  1.380573  1.000000  2.105578  2.902655  2.156428  2.272538  1.000000   \n",
-       "149  1.488551  1.000000  2.021685  3.244604  2.413166  2.418467  1.473341   \n",
-       "\n",
-       "         3311      3312  \n",
-       "0    2.478581  2.308842  \n",
-       "1    2.689903  2.090928  \n",
-       "2    2.605230  1.368659  \n",
-       "3    2.530046  2.185514  \n",
-       "4    2.598517  1.764624  \n",
-       "..        ...       ...  \n",
-       "145  2.413685  2.018971  \n",
-       "146  2.219480  1.992730  \n",
-       "147  2.282543  2.055703  \n",
-       "148  1.968483  2.318502  \n",
-       "149  3.005292  2.232793  \n",
+       "         3306      3307      3308      3309      3310      3311      3312  \n",
+       "0    2.054345  2.808224  1.782186  2.665703  2.468214  2.478581  2.308842  \n",
+       "1    2.127914  2.979658  1.961089  2.519027  2.054383  2.689903  2.090928  \n",
+       "2    1.945321  3.257004  1.965061  2.536066  1.449324  2.605230  1.368659  \n",
+       "3    2.155032  3.270371  1.928473  2.618074  2.154013  2.530046  2.185514  \n",
+       "4    2.094192  3.246666  1.824516  2.562317  1.942256  2.598517  1.764624  \n",
+       "..        ...       ...       ...       ...       ...       ...       ...  \n",
+       "145  2.149958  3.042383  1.799134  2.772116  2.460484  2.413685  2.018971  \n",
+       "146  2.174641  2.902840  1.844850  2.647755  1.000000  2.219480  1.992730  \n",
+       "147  2.125741  3.041140  1.779308  2.585771  1.000000  2.282543  2.055703  \n",
+       "148  2.105578  2.902655  2.156428  2.272538  1.000000  1.968483  2.318502  \n",
+       "149  2.021685  3.244604  2.413166  2.418467  1.473341  3.005292  2.232793  \n",
        "\n",
        "[150 rows x 3313 columns]"
       ]
@@ -2881,16 +2868,19 @@
     }
    ],
    "source": [
+    "#Replace all 1.000000e+99 with nan\n",
+    "df[df > 100] = np.nan\n",
+    "\n",
     "# Separate numerical columns\n",
     "numerical_cols = df.select_dtypes(include=['float64', 'int64']).columns\n",
     "\n",
     "\n",
-    "# Impute missing values for numerical columns using the median\n",
+    "# Imput missing values for numerical columns using the median\n",
     "for col in numerical_cols:\n",
     "    if df[col].isnull().sum() > 0:\n",
     "        median_value = df[col].median()\n",
     "        df[col] = df[col].fillna(median_value)\n",
-    "        print(f\"Imputed missing values in '{col}' with median: {median_value}\")\n",
+    "        #print(f\"Imputed missing values in '{col}' with median: {median_value}\")\n",
     "df"
    ]
   },
@@ -2912,10 +2902,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.1\n",
-      "F1 Score: 0.043560606060606064\n",
-      "Recall: 0.1\n",
-      "Precision: 0.14583333333333334\n"
+      "Accuracy: 0.9666666666666667\n",
+      "F1 Score: 0.9637037037037037\n",
+      "Recall: 0.9666666666666667\n",
+      "Precision: 0.9681159420289855\n"
      ]
     }
    ],
@@ -2970,10 +2960,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7333333333333333\n",
-      "F1 Score: 0.6205128205128205\n",
-      "Recall: 0.7333333333333333\n",
-      "Precision: 0.7333333333333333\n"
+      "Accuracy: 0.9\n",
+      "F1 Score: 0.8798581560283687\n",
+      "Recall: 0.9\n",
+      "Precision: 0.9089655172413793\n"
      ]
     }
    ],
@@ -3010,6 +3000,14 @@
     "print(\"Recall:\", recall)\n",
     "print(\"Precision:\", precision)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2838f4da-f634-4540-8eb3-7c44fbffca90",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
