--- a/Classification_3_CW_MH.ipynb
+++ b/Classification_3_CW_MH.ipynb
@@ -1008,14 +1008,14 @@
        "      <td>5</td>\n",
        "      <td>4.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>5.000000e+00</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>3</td>\n",
        "      <td>3.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>1.000000e+99</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1025,14 +1025,14 @@
        "      <td>5</td>\n",
        "      <td>5.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>5.000000e+00</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>3</td>\n",
        "      <td>5.0</td>\n",
        "      <td>2</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>1.000000e+00</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1042,14 +1042,14 @@
        "      <td>3</td>\n",
        "      <td>5.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>5.000000e+00</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>2</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1</td>\n",
        "      <td>2.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>1.000000e+00</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1059,14 +1059,14 @@
        "      <td>1</td>\n",
        "      <td>2.0</td>\n",
        "      <td>6.0</td>\n",
-       "      <td>5.000000e+00</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>1</td>\n",
        "      <td>4.0</td>\n",
        "      <td>2</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>1.000000e+00</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1076,14 +1076,14 @@
        "      <td>1</td>\n",
        "      <td>2.0</td>\n",
        "      <td>6.0</td>\n",
-       "      <td>3.000000e+00</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>1</td>\n",
        "      <td>4.0</td>\n",
        "      <td>2</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>1.000000e+00</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1110,14 +1110,14 @@
        "      <td>4</td>\n",
        "      <td>5.0</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>1.000000e+99</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>1</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>1.000000e+00</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6296</th>\n",
@@ -1127,14 +1127,14 @@
        "      <td>3</td>\n",
        "      <td>3.0</td>\n",
        "      <td>9.0</td>\n",
-       "      <td>1.000000e+99</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>3</td>\n",
        "      <td>4.0</td>\n",
        "      <td>2</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>8.0</td>\n",
-       "      <td>1.000000e+00</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6297</th>\n",
@@ -1144,14 +1144,14 @@
        "      <td>4</td>\n",
        "      <td>4.0</td>\n",
        "      <td>6.0</td>\n",
-       "      <td>5.000000e+00</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>3</td>\n",
        "      <td>4.0</td>\n",
        "      <td>2</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>1.000000e+00</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6298</th>\n",
@@ -1161,14 +1161,14 @@
        "      <td>3</td>\n",
        "      <td>4.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>5.000000e+00</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>1</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>1.000000e+00</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6299</th>\n",
@@ -1178,14 +1178,14 @@
        "      <td>2</td>\n",
        "      <td>4.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>2.000000e+00</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>2</td>\n",
        "      <td>2.0</td>\n",
        "      <td>0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>1.000000e+00</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1193,31 +1193,18 @@
        "</div>"
       ],
       "text/plain": [
-       "      0   1    2   3    4    5             6   7    8   9    10   11   12  \\\n",
-       "0      9   2  1.0   5  4.0  5.0  5.000000e+00   3  3.0   0  1.0  1.0  7.0   \n",
-       "1      9   1  1.0   5  5.0  5.0  5.000000e+00   3  5.0   2  1.0  1.0  7.0   \n",
-       "2      9   2  1.0   3  5.0  1.0  5.000000e+00   2  3.0   1  2.0  3.0  7.0   \n",
-       "3      1   2  5.0   1  2.0  6.0  5.000000e+00   1  4.0   2  3.0  1.0  7.0   \n",
-       "4      1   2  5.0   1  2.0  6.0  3.000000e+00   1  4.0   2  3.0  1.0  7.0   \n",
-       "...   ..  ..  ...  ..  ...  ...           ...  ..  ...  ..  ...  ...  ...   \n",
-       "6295   7   1  5.0   4  5.0  3.0  1.000000e+99   1  1.0   0  2.0  3.0  7.0   \n",
-       "6296   9   2  1.0   3  3.0  9.0  1.000000e+99   3  4.0   2  1.0  1.0  8.0   \n",
-       "6297   5   2  1.0   4  4.0  6.0  5.000000e+00   3  4.0   2  1.0  1.0  7.0   \n",
-       "6298   9   1  3.0   3  4.0  1.0  5.000000e+00   1  1.0   0  1.0  1.0  7.0   \n",
-       "6299   8   1  1.0   2  4.0  1.0  2.000000e+00   2  2.0   0  2.0  3.0  7.0   \n",
-       "\n",
-       "                13  \n",
-       "0     1.000000e+99  \n",
-       "1     1.000000e+00  \n",
-       "2     1.000000e+00  \n",
-       "3     1.000000e+00  \n",
-       "4     1.000000e+00  \n",
-       "...            ...  \n",
-       "6295  1.000000e+00  \n",
-       "6296  1.000000e+00  \n",
-       "6297  1.000000e+00  \n",
-       "6298  1.000000e+00  \n",
-       "6299  1.000000e+00  \n",
+       "      0   1    2   3    4    5    6   7    8   9    10   11   12   13\n",
+       "0      9   2  1.0   5  4.0  5.0  5.0   3  3.0   0  1.0  1.0  7.0  1.0\n",
+       "1      9   1  1.0   5  5.0  5.0  5.0   3  5.0   2  1.0  1.0  7.0  1.0\n",
+       "2      9   2  1.0   3  5.0  1.0  5.0   2  3.0   1  2.0  3.0  7.0  1.0\n",
+       "3      1   2  5.0   1  2.0  6.0  5.0   1  4.0   2  3.0  1.0  7.0  1.0\n",
+       "4      1   2  5.0   1  2.0  6.0  3.0   1  4.0   2  3.0  1.0  7.0  1.0\n",
+       "...   ..  ..  ...  ..  ...  ...  ...  ..  ...  ..  ...  ...  ...  ...\n",
+       "6295   7   1  5.0   4  5.0  3.0  5.0   1  1.0   0  2.0  3.0  7.0  1.0\n",
+       "6296   9   2  1.0   3  3.0  9.0  5.0   3  4.0   2  1.0  1.0  8.0  1.0\n",
+       "6297   5   2  1.0   4  4.0  6.0  5.0   3  4.0   2  1.0  1.0  7.0  1.0\n",
+       "6298   9   1  3.0   3  4.0  1.0  5.0   1  1.0   0  1.0  1.0  7.0  1.0\n",
+       "6299   8   1  1.0   2  4.0  1.0  2.0   2  2.0   0  2.0  3.0  7.0  1.0\n",
        "\n",
        "[6300 rows x 14 columns]"
       ]
@@ -1228,16 +1215,19 @@
     }
    ],
    "source": [
+    "#Replace all 1.000000e+99 with nan\n",
+    "df[df > 100] = np.nan\n",
+    "\n",
     "# Separate numerical columns\n",
     "numerical_cols = df.select_dtypes(include=['float64', 'int64']).columns\n",
     "\n",
     "\n",
-    "# Impute missing values for numerical columns using the median\n",
+    "# Imput missing values for numerical columns using the median\n",
     "for col in numerical_cols:\n",
     "    if df[col].isnull().sum() > 0:\n",
     "        median_value = df[col].median()\n",
     "        df[col] = df[col].fillna(median_value)\n",
-    "        print(f\"Imputed missing values in '{col}' with median: {median_value}\")\n",
+    "        #print(f\"Imputed missing values in '{col}' with median: {median_value}\")\n",
     "df"
    ]
   },
@@ -1259,10 +1249,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.26904761904761904\n",
-      "F1 Score: 0.17695915644761578\n",
-      "Recall: 0.26904761904761904\n",
-      "Precision: 0.1611248456267565\n"
+      "Accuracy: 0.33650793650793653\n",
+      "F1 Score: 0.25711129089322693\n",
+      "Recall: 0.33650793650793653\n",
+      "Precision: 0.2596054513851909\n"
      ]
     }
    ],
@@ -1317,10 +1307,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.24444444444444444\n",
-      "F1 Score: 0.23030123534414274\n",
-      "Recall: 0.24444444444444444\n",
-      "Precision: 0.22558699315403885\n"
+      "Accuracy: 0.30396825396825394\n",
+      "F1 Score: 0.2823394971616471\n",
+      "Recall: 0.30396825396825394\n",
+      "Precision: 0.27742092072171287\n"
      ]
     }
    ],
