--- a/Classification_2_CW_MH.ipynb
+++ b/Classification_2_CW_MH.ipynb
@@ -1601,16 +1601,19 @@
     }
    ],
    "source": [
+    "#Replace all 1.000000e+99 with nan\n",
+    "df[df > 100] = np.nan\n",
+    "\n",
     "# Separate numerical columns\n",
     "numerical_cols = df.select_dtypes(include=['float64', 'int64']).columns\n",
     "\n",
     "\n",
-    "# Impute missing values for numerical columns using the median\n",
+    "# Imput missing values for numerical columns using the median\n",
     "for col in numerical_cols:\n",
     "    if df[col].isnull().sum() > 0:\n",
     "        median_value = df[col].median()\n",
     "        df[col] = df[col].fillna(median_value)\n",
-    "        print(f\"Imputed missing values in '{col}' with median: {median_value}\")\n",
+    "        #print(f\"Imputed missing values in '{col}' with median: {median_value}\")\n",
     "df"
    ]
   },
