--- a/Classification_5_CW_MH.ipynb
+++ b/Classification_5_CW_MH.ipynb
@@ -1093,16 +1093,19 @@
     }
    ],
    "source": [
+    "#Replace all 1.000000e+99 with nan\n",
+    "df[df > 100] = np.nan\n",
+    "\n",
     "# Separate numerical columns\n",
     "numerical_cols = df.select_dtypes(include=['float64', 'int64']).columns\n",
     "\n",
     "\n",
-    "# Impute missing values for numerical columns using the median\n",
+    "# Imput missing values for numerical columns using the median\n",
     "for col in numerical_cols:\n",
     "    if df[col].isnull().sum() > 0:\n",
     "        median_value = df[col].median()\n",
     "        df[col] = df[col].fillna(median_value)\n",
-    "        print(f\"Imputed missing values in '{col}' with median: {median_value}\")\n",
+    "        #print(f\"Imputed missing values in '{col}' with median: {median_value}\")\n",
     "df"
    ]
   },
@@ -1124,10 +1127,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.5803571428571429\n",
-      "F1 Score: 0.5275004266939751\n",
-      "Recall: 0.5803571428571429\n",
-      "Precision: 0.6009615384615384\n"
+      "Accuracy: 0.5758928571428571\n",
+      "F1 Score: 0.5219869756634462\n",
+      "Recall: 0.5758928571428571\n",
+      "Precision: 0.5908856469201297\n"
      ]
     }
    ],
@@ -1182,10 +1185,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.5758928571428571\n",
-      "F1 Score: 0.5613991692865764\n",
-      "Recall: 0.5758928571428571\n",
-      "Precision: 0.5612772004887769\n"
+      "Accuracy: 0.5803571428571429\n",
+      "F1 Score: 0.5637251166573912\n",
+      "Recall: 0.5803571428571429\n",
+      "Precision: 0.594673888512751\n"
      ]
     }
    ],
